[FIX] 결제자 저장 방식 수정